feat(backend): Remove usage of ELS classes (#4647)
* feat(project): use OpenSearch 2 and Elasticsearch 8

* fix(chore): remove duplicate deps

* feat(backend): introduce ProcessStore for Process and ProcessInstances

Related with #4617

* feat(backend): add null check for permission service

Related with #4617

* feat(backend): return null instead of throw exception

* feat(backend): return empty Optional in case of error

* feat(backend): check for null permissions

* feat(backend): use store.NotFoundException

* feat(backend): use null allowed object for allAllowed

* feat(backend): store.NotFoundException is a OperateRuntimeException

* feat(backend): add deletion of documents in index to ProcessStore

* feat(backend): factor out allowed process ids

* feat(backend): remove SearchHit (ELS) from ImportBatch

Related with #4644

* feat(backend): clean up

Related with #4644

* feat(backend): refactor ImportPositionHolder to use ImportStore

Related with #4644

* feat(backend): add missing classes to load in test

Related with #4617